--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>React App</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgrAcVZqYccF51D-5BZV_KEH13QabgIzw&libraries=places"></script>
   </head>
   <body>
     
